# brics_3d_experimental

./: .gitignore  stack.xml
brics_3d_icra_2013_demo/: .gitignore  CMakeLists.txt  README.txt  mainpage.dox  manifest.xml
brics_3d_icra_2013_demo/cfg/: roiConfiguration.yaml  simpleSceneAnalysisConfiguration.yaml
brics_3d_icra_2013_demo/data/: get_data.sh
brics_3d_icra_2013_demo/launch/: bring_up_rsg.launch
brics_3d_icra_2013_demo/src/: RoiAdapter.cpp  RoiAdapter.h  RoiManager.cpp  RoiManager.h  SceneAssociation.cpp  SceneAssociation.h  SimpleSceneAnalysis.cpp  SimpleSceneAnalysis.h  scene_analyzer.cpp
brics_3d_mm_demo/: CMakeLists.txt  mainpage.dox  manifest.xml
brics_3d_mm_demo/src/: ROSWrapper.cpp  ROSWrapper.h  SceneGraphToGeomConverter.cpp  SceneGraphToGeomConverter.h  main.cpp
brics_3d_msgs/: .gitignore  mainpage.dox  manifest.xml
brics_3d_msgs/msg/: PointCloudSegments.msg  SceneGraphUpdate.msg  SceneObject.msg  Shape.msg
brics_3d_msgs/src/: .gitignore
brics_3d_msgs/src/brics_3d_msgs/msg/: _Attribute.py  _Coordination.py  _SceneObject.py  _SceneObjects.py  __init__.py
brics_3d_msgs/src/brics_3d_msgs/srv/: _AddGeometricNode.py  _AddGroup.py  _AddNode.py  _AddParent.py  _AddTransformNode.py  _DeleteNode.py  _GetGeometry.py  _GetGroupChildren.py  _GetNodeAttributes.py  _GetNodeParents.py  _GetNodes.py  _GetRootId.py  _GetSceneObjects.py  _GetTransform.py  _GetTransformForNode.py  _SetNodeAttributes.py  _SetTransform.py  __init__.py
brics_3d_msgs/srv/: AddGeometricNode.srv  AddGroup.srv  AddNode.srv  AddParent.srv  AddTransformNode.srv  DeleteNode.srv  GetGeometry.srv  GetGroupChildren.srv  GetNodeAttributes.srv  GetNodeParents.srv  GetNodes.srv  GetRootId.srv  GetSceneObjects.srv  GetTransform.srv  GetTransformForNode.srv  RemoveParent.srv  ResentSceneGraph.srv  SetNodeAttributes.srv  SetTransform.srv
brics_3d_ros/: .gitignore  .project  CMakeLists.txt  mainpage.dox  manifest.xml
brics_3d_ros/src/brics_3d_ros/: SceneGraphROSBroadcaster.cpp  SceneGraphROSBroadcaster.h  SceneGraphROSCommunicator.cpp  SceneGraphROSCommunicator.h  SceneGraphROSListener.cpp  SceneGraphROSListener.h  SceneGraphResentServer.cpp  SceneGraphResentServer.h  SceneGraphTypeCasts.cpp  SceneGraphTypeCasts.h  WorldModelQueryServer.cpp  WorldModelQueryServer.h
brics_3d_ros/src/examples/: scene_objects_sample_query.cpp  tf_to_scene_graph_node.cpp  world_model_duplication_node.cpp  world_model_node.cpp  world_model_sample_queries.cpp  world_model_transform_updater.cpp
